--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,13 @@
                     <p class="card-text">{{ shoe.description|truncate(100) }}</p>
                     
                     <div class="d-flex justify-content-between align-items-center mt-auto">
-                        <h4 class="text-danger">{{ shoe.formatted_price }}</h4>
+                        <h4 class="text-danger">
+                            {% if shoe.price %}
+                                ${{ '%.2f' | format(shoe.price|float) }}
+                            {% else %}
+                                Price unavailable
+                            {% endif %}
+                        </h4>
                         
                         <!-- Show total stock available -->
                         {% if shoe.total_stock > 0 %}
