--- a/templates/admin.html
+++ b/templates/admin.html
@@ -106,7 +106,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <i class="bi bi-shop"></i> ShoeStore Admin
+                <i class="bi bi-shop"></i> Legit Collections Admin
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminNav">
                 <span class="navbar-toggler-icon"></span>
