--- a/templates/admin.html
+++ b/templates/admin.html
@@ -138,7 +138,14 @@
                             <i class="bi bi-person-circle" style="font-size: 3rem;"></i>
                         </div>
                         <h5>{{ current_user.name }}</h5>
-                        <p class="text-muted">Administrator</p>
+                        {% if admin_type == 'super_admin' %}
+                            <p class="text-muted">Super Administrator</p>
+                        {% elif admin_type == 'limited_admin' %}
+                            <p class="text-muted">Limited Administrator</p>
+                            <small class="text-info">Products: {{ current_user.get_product_count() }}/{{ current_user.product_limit }}</small>
+                        {% else %}
+                            <p class="text-muted">Administrator</p>
+                        {% endif %}
                     </div>
                     
                     <ul class="nav flex-column">
@@ -162,7 +169,14 @@
                                 <i class="bi bi-receipt me-2"></i> Order Management
                             </a>
                         </li>
+                        {% if admin_type == 'super_admin' %}
                         <li class="nav-item mt-4">
+                            <a class="nav-link" href="{{ url_for('create_limited_admin') }}">
+                                <i class="bi bi-person-plus me-2"></i> Create Limited Admin
+                            </a>
+                        </li>
+                        {% endif %}
+                        <li class="nav-item">
                             <a class="nav-link" href="#">
                                 <i class="bi bi-people me-2"></i> Users
                             </a>
